# catalan-traffic-accident-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
models/: xgboost_nest123_depth1.pkl  xgboost_nest123_depth1_metadata.json  xgboost_nest40_depth7.pkl  xgboost_nest40_depth7_metadata.json  xgboost_nest48_depth5.pkl  xgboost_nest48_depth5_metadata.json  xgboost_nest91_depth4.pkl  xgboost_nest91_depth4_metadata.json
notebooks/: 01_exploratory_analysis.ipynb  02_data_cleaning.ipynb  03_model_exploration.ipynb  04_training_pipeline.ipynb  05_xai_analysis.ipynb
output/: df_cleaned.csv  label_encoders.pkl  scaler.pkl  test_data.pkl  test_data_scaled.pkl
src/: app.py
src/pages/: comparative_analysis.py  hypothetical_scenarios.py  past_accident_analysis.py  risk_prevention.py
src/utils/: model_loader.py  utils.py
