[project]
name = "catalan-traffic-accident-analysis"
version = "0.1.0"
description = "Visual Analytics and ML analysis of Catalan road traffic accidents"
authors = [{name = "Felipe López, Oriol Pont"}]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "interpret>=0.4.0",
    "optuna>=3.0.0",
    "shap>=0.40.0",
    "streamlit>=1.28.0"
]
